# Wage-Calculation-Program

./: .gitignore  LICENSE  Patch_Commit_Notes.txt  README.md  TODO.md  pyproject.toml  requirments.txt
Project/: TODO.md  att_cal_hours.py  att_clock_times.py  att_clock_weekone.py  att_roster_times.py  att_times_weekone.py  att_weekone.py  carwash.py  carwash_db.py  cas_cal_hours.py  cas_clock_times.py  cas_roster_times.py  clock.py  config.py  database.py  employee_info.py  excel_format.py  functions.py  gen_payslips.py  main.py  main_tk.py  payroll.py  payroll_logic.py  payslips.py  payslips_backup.py  processor.py  pyproject.toml  tax_cal.py
Work_ Wages Generator tKinter/: main_tk.py
