[project]
name = "wage-calculation-program"
version = "0.85.0"
description = "Calculate wage times, salaries, taxes and creates payslips"
authors = [
    {name = "Devon",email = "ds.pydev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlwings (>=0.33.16,<0.34.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
